--- a/app/src/main/res/layout/books_list_item_view.xml
+++ b/app/src/main/res/layout/books_list_item_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:padding="15dp">
 
@@ -18,7 +20,7 @@
         android:id="@+id/book_name"
         android:layout_width="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Book title"
+        tools:text="Book title"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -30,9 +32,19 @@
         android:id="@+id/book_author"
         android:layout_width="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Author"
+        tools:text="Author"
         android:layout_height="wrap_content"
         android:layout_below="@id/book_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/book_type"
+        android:layout_width="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        tools:text="Type"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/book_author"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
