--- a/app/src/main/res/layout/books_list_activity_large.xml
+++ b/app/src/main/res/layout/books_list_activity_large.xml
@@ -22,12 +22,13 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
 
-    <include
-        layout="@layout/books_list_activity"
+    <fragment
+        android:id="@+id/book_list_container"
+        android:name="com.verybadalloc.designlib.views.BooksListFragment"
+        tools:context=".BooksListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        tools:layout="@android:layout/list_content" />
+        android:layout_weight="2"/>
 
     <FrameLayout
         android:id="@+id/book_details_container"
