--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,10 @@
     </style>
 
     <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar" >
-
+        <item name="colorPrimary">@color/material_blue_grey_800</item>
+        <item name="colorPrimaryDark">@color/material_blue_grey_950</item>
+        <item name="colorAccent">@color/material_grey_300</item>
+        <item name="colorControlHighlight">@color/material_deep_teal_200</item>
     </style>
 
 </resources>
