--- a/app/src/main/res/layout/book_details_fragment.xml
+++ b/app/src/main/res/layout/book_details_fragment.xml
@@ -1,54 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="false"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <LinearLayout
+    android:layout_width="match_parent">
+
+    <ScrollView
+
+        android:fillViewport="false"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:padding="15dp"
-        android:gravity="center_horizontal"
         android:layout_height="match_parent"
-        tools:context=".BookDetailsFragment">
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:padding="15dp"
+            android:gravity="center_horizontal"
+            android:layout_height="match_parent"
+            tools:context=".BookDetailsFragment">
 
-        <ImageView
-            android:layout_width="200dp"
-            android:paddingBottom="20dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/book_image"
-            android:adjustViewBounds="true"
-            android:src="@mipmap/book_image_not_found" />
+            <ImageView
+                android:layout_width="200dp"
+                android:paddingBottom="20dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/book_image"
+                android:adjustViewBounds="true"
+                android:src="@mipmap/book_image_not_found" />
 
-        <TextView
-            android:id="@+id/book_name"
-            android:paddingBottom="5dp"
-            android:layout_width="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Book Name"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/book_name"
+                android:paddingBottom="5dp"
+                android:layout_width="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Book Name"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/book_author"
-            android:paddingBottom="15dp"
-            android:layout_width="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Address"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/book_author"
+                android:paddingBottom="15dp"
+                android:layout_width="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Address"
+                android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/book_add_cart"
-            android:textAppearance="?android:attr/textAppearanceButton"
-            android:background="?attr/colorAccent"
-            android:text="Add to Cart"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColor="?attr/colorPrimary"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_height="50dp" />
-    </LinearLayout>
-</ScrollView>
+            <!--<Button-->
+                <!--android:id="@+id/book_add_cart"-->
+                <!--android:textAppearance="?android:attr/textAppearanceButton"-->
+                <!--android:background="?attr/colorAccent"-->
+                <!--android:text="Add to Cart"-->
+                <!--android:paddingLeft="15dp"-->
+                <!--android:paddingRight="15dp"-->
+                <!--android:textColor="?attr/colorPrimary"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_height="50dp" />-->
+        </LinearLayout>
+    </ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</android.support.design.widget.CoordinatorLayout>
+
+
