--- a/app/src/main/res/layout/books_list_activity.xml
+++ b/app/src/main/res/layout/books_list_activity.xml
@@ -1,6 +1,67 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:name="com.verybadalloc.designlib.views.BooksListFragment"
-    tools:context=".BooksListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout">
+
+    <android.support.design.widget.CoordinatorLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:background="?attr/colorPrimaryDark"
+                android:layout_width="match_parent"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_scrollFlags="scroll|enterAlways"
+                android:layout_height="?attr/actionBarSize"/>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:background="?attr/colorPrimary"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="?attr/colorControlHighlight"
+                app:tabTextColor="@android:color/white"
+                app:tabIndicatorColor="?attr/colorControlHighlight"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:layout_height="match_parent"/>
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
+    <!--<fragment-->
+        <!--android:name="com.verybadalloc.designlib.views.BooksListFragment"-->
+        <!--android:layout_marginTop="?attr/actionBarSize"-->
+        <!--tools:context=".BooksListFragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"/>-->
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_gravity="start"
+        android:id="@+id/navigation"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        app:itemBackground="?attr/colorPrimary"
+        app:itemTextColor="?attr/colorAccent"
+        android:background="?attr/colorPrimary"
+        app:headerLayout="@layout/navigation_header"
+        />
+
+</android.support.v4.widget.DrawerLayout>
+
